--- a/bevy_asset_loader/Cargo.toml
+++ b/bevy_asset_loader/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bevy_asset_loader"
-version = "0.23.0"
+version = "0.24.0"
 authors = ["Niklas Eicker <git@nikl.me>"]
 edition = "2024"
 license = "MIT OR Apache-2.0"
@@ -22,26 +22,32 @@ standard_dynamic_assets = ["dep:bevy_common_assets", "dep:serde"]
 progress_tracking = ["dep:iyes_progress"]
 
 [dependencies]
-bevy = { version = "0.16.0", default-features = false, features = [
+bevy = { version = "0.17.0", default-features = false, features = [
     "bevy_asset",
     "bevy_state",
     "bevy_log",
 ] }
-bevy_asset_loader_derive = { version = "0.23.0", path = "../bevy_asset_loader_derive" }
+bevy_asset_loader_derive = { version = "0.24.0", path = "../bevy_asset_loader_derive" }
 anyhow = "1"
 path-slash = "0.2"
-
-bevy_common_assets = { version = "0.13.0", features = [
-    "ron",
+# bevy_common_assets = { version = "0.14.0", features = [
+#     "ron",
+# ], optional = true }
+bevy_common_assets = { git = "https://github.com/funatsufumiya/bevy_common_assets/", rev="4b0cc70", features = [
+    "ron"
 ], optional = true }
 serde = { version = "1", optional = true }
-iyes_progress = { version = "0.14.0", optional = true }
+# iyes_progress = { version = "0.15.0", optional = true }
+iyes_progress = { git = "https://github.com/funatsufumiya/iyes_progress/", rev="5bb68d2", optional = true }
 
 [dev-dependencies]
-bevy = { version = "0.16.0", features = ["vorbis"] }
+bevy = { version = "0.17.0", features = ["vorbis"] }
+bevy_asset = { version ="0.17.0", default-features = false }
 anyhow = "1"
-iyes_progress = { version = "0.14.0" }
-bevy_common_assets = { version = "0.13.0", features = ["ron"] }
+# iyes_progress = { version = "0.15.0" }
+iyes_progress = { git = "https://github.com/funatsufumiya/iyes_progress/", rev="5bb68d2" }
+# bevy_common_assets = { version = "0.14.0", features = ["ron"] }
+bevy_common_assets = { git = "https://github.com/funatsufumiya/bevy_common_assets/", rev="4b0cc70", features = ["ron"]}
 serde = { version = "1" }
 ron = "0.8.1"
 trybuild = { version = "1.0" }
