--- a/bevy_asset_loader/Cargo.toml
+++ b/bevy_asset_loader/Cargo.toml
@@ -30,10 +30,7 @@ bevy = { version = "0.17.0", default-features = false, features = [
 bevy_asset_loader_derive = { version = "0.24.0", path = "../bevy_asset_loader_derive" }
 anyhow = "1"
 path-slash = "0.2"
-# bevy_common_assets = { version = "0.14.0", features = [
-#     "ron",
-# ], optional = true }
-bevy_common_assets = { git = "https://github.com/funatsufumiya/bevy_common_assets/", rev="4b0cc70", features = [
+bevy_common_assets = { version = "0.14.0", features = [
     "ron"
 ], optional = true }
 serde = { version = "1", optional = true }
@@ -46,8 +43,7 @@ bevy_asset = { version ="0.17.0", default-features = false }
 anyhow = "1"
 # iyes_progress = { version = "0.15.0" }
 iyes_progress = { git = "https://github.com/funatsufumiya/iyes_progress/", rev="5bb68d2" }
-# bevy_common_assets = { version = "0.14.0", features = ["ron"] }
-bevy_common_assets = { git = "https://github.com/funatsufumiya/bevy_common_assets/", rev="4b0cc70", features = ["ron"]}
+bevy_common_assets = { version = "0.14.0", features = ["ron"] }
 serde = { version = "1" }
 ron = "0.8.1"
 trybuild = { version = "1.0" }
